# ProjectTRD

./: README.md
pytrd/dcs/: minidaq.py
pytrd/src/dcs/: minidaq.py
trdbox/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  ack_channel.hh  cmake_install.cmake  command.cc  command.hh  data_acquisition.cc  data_acquisition.hh  dim_services.cc  dim_services.hh  error.txt  lbox_addr.h  logTest.cc  logging.hh  loggy.hh  output.txt  subevd  subevd.cc  trd_subevent_builder.cc  trd_subevent_builder.hh  trdbox.spec.in  trdbox_zmq.hh  trdboxd  trdboxd.cc  trigger.cc  trigger.hh
trdbox/cmake/: GetGitRevisionDescription.cmake
trdbox/init.d/: trdbox
trdbox/logicbox/: su738.cc  su738.hh
zmqSimulation/: analysis.py  client.py  server.py
